# Skuggi-GameBoy-Emulator

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  New Document.rnote  README.md  build.ninja  cmake_install.cmake  gitignore.txt  todo
.cmake/api/v1/reply/: cache-v2-05b46c1fda8918bdd94a.json  cache-v2-fc6b0081dd12c87556f2.json  cmakeFiles-v1-248ea487e15c2b31b064.json  cmakeFiles-v1-8e83638f0499be52c3be.json  codemodel-v2-0c5675e2678489726aba.json  codemodel-v2-2b60e471fba6c951fe78.json  codemodel-v2-6268272de5e98e1a0318.json  codemodel-v2-795d63d5056511d1ed79.json  codemodel-v2-dad86659e5465dc987d2.json  index-2025-05-31T11-38-38-0744.json  index-2025-05-31T12-20-08-0914.json  index-2025-06-29T01-44-30-0356.json  index-2025-07-14T02-17-00-0407.json  index-2025-07-29T00-19-39-0511.json  index-2025-08-02T03-33-50-0031.json  target-GBEmu-Debug-166c813f5ee3c09a8252.json  target-GBEmu-Debug-1e59d4707323eaa7d33e.json  target-GBEmu-Debug-c74e4a66f20936882dc9.json  target-GBEmu-Debug-f1d2ef98a4f96435a38d.json  target-GBEmuTests-Debug-32e4253ff8cd032687ca.json  target-GBEmuTests-Debug-71aeccdd458ee4ba5da8.json  target-GBEmuTests-Debug-a1ce5e093f329ab802cc.json  target-GBEmuTests-Debug-eb2526b835f75cffdd78.json  target-GBEmuTests-Debug-ef809a65d593f4490289.json
ROM/: RomGen.py
src/: main.cpp
src/defs/: CPU.cpp
src/defs/CPU/: CPU.cpp  InstructionResolver.cpp  InstructionResolver.hpp  Instructions.cpp  Registers.cpp
src/defs/CPU/Instructions/: InstructionLoader.cpp  InstructionResolver.cpp  Instructions.cpp
src/defs/Memoria/: BANK00.cpp  BANKNN.cpp  Memory.cpp  MemoryParts.cpp  VRAM.cpp
src/defs/ROM/: ROMLoader.cpp
src/includes/: CPU.hpp
src/includes/CPU/: CPU.hpp  InstructionResolver.cpp  InstructionResolver.hpp  Instructions.hpp  InstructionsParameters.hpp  Registers.hpp
src/includes/CPU/Instructions/: InstructionLoader.hpp  InstructionResolver.hpp  Instructions.hpp  InstructionsParameters.hpp
src/includes/Memoria/: BANK00.hpp  BANKNN.hpp  Memory.hpp  MemoryParts.hpp  VRAM.hpp
src/includes/ROM/: ROMLoader.hpp
src/includes/enum/: FlagsEnum.hpp  RegistersEnum.hpp
src/testes/: tests.cpp
src/testes/CPU/Instructions/: Instructions.cpp
